<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Registrar.pantallaRegistrar"
    android:background="@drawable/fondo3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearlayout6">

        <ImageView
            android:layout_width="1569dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:id="@+id/imagenView2"
            android:src="@drawable/ic_action_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linerlayaout7"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/textTitulo"
            android:textColor="#1b4be8"
            android:text="@string/titulo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#1b4be8"
            android:id="@+id/textRegistro"
            android:text="@string/formulario"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextNombre"
            android:textColor="#1b4be8"
            android:hint="@string/nombre"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextApellido"
            android:textColor="#1b4be8"
            android:hint="@string/apellido"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextUsuarioR"
            android:textColor="#1b4be8"
            android:hint="@string/ingresaUsuario"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextClaveR1"
            android:textColor="#1b4be8"
            android:hint="@string/ingresarClave"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextClaveR2"
            android:textColor="#1b4be8"
            android:hint="@string/reingresa"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linerlayaout8"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/btnNuevo"
            android:textColor="#1b4be8"
            android:layout_marginLeft="10dp"
            android:background="@drawable/boton3"
            android:text="@string/nuevo"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/btnCancelar"
            android:textColor="#1b4be8"
            android:layout_marginStart="20dp"
            android:background="@drawable/boton3"
            android:text="@string/cancelar"/>

    </LinearLayout>

</RelativeLayout>
